2005-11-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (GEN_BUILT_CLASSES): Delete.
	* Makefile.gen.sh: Rewrite .java -> .class .jar rule to comile
	everything at once.

2005-11-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.java.h): Replace .classes.h rule.

2005-11-07  Andrew Cagney  <cagney@redhat.com>

	* TestRunner.sh: Add a -<repeat> option.

2005-11-02  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.gen.sh: Added rule to copy over test .cpp files after a 
	make install.

2005-11-02  Igor Foox  <ifoox@redhat.com>

	 * m4/ac_get_lib_line.m4, m4/ac_find_file.m4: Add copyright statement.

2005-11-01  Igor Foox  <ifoox@redhat.com>

	* acinclude.m4: Fixed ordering of macro calls.

	* Makefile.rules: Added ACLOCAL_AMFLAGS = -I common/m4 to include local
	macros. 
	* m4: New directory.
	* m4/ac_get_lib_line.m4: New file.
	* m4/ac_find_file.m4: New file.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* TestRunner.sh: Print PASS when a test does not FAIL or ERROR.

	* Makefile.rules: Fix typo, $(FIG2DEV) not $FIG2DEV.

2005-10-31  Igor Foox  <ifoox@redhat.com>

	* acinclude.m4: Added a check for fig2dev.
	* Makefile.rules: Changed all references to fig2dev to $FIG2DEV.

2005-10-26  Igor Foox  <ifoox@redhat.com>

	* Makefile.rules: Added EXCEPTION to the EXTRA_DIST target to distribute
	this file in every of the main 4 frysk subdirectories (sys, gui, common,
	imports).

2005-10-25  Igor Foox  <ifoox@redhat.com>

	* Makefile.rules (clean-local-po): Fix clean to delete all .Po files.
	
2005-10-22  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (AM_CXXFLAGS): Fix -I argument, $(top_builddir),
	not $(top_buildir).

2005-10-18  Igor Foox  <ifoox@redhat.com>

	* Makefile.rules: Added TestRunner.sh to EXTRA_DIST.
	* Makefile.gen.sh: Added .hxx to .c and .cxx suffixes so that .hxx files are
	now also distributed. Removed line in jar_print function that generated
	automake warnings.

2005-10-14  Igor Foox  <ifoox@redhat.com>
